--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,12 @@
   "version": "1.0.0",
   "author": "Kyle Shevlin <kyle.a.shevlin@gmail.com> (http://kyleshevlin.com)",
   "browser_action": {
-   "default_icon": "fix-github.png"
+    "default_icon": "fix-github16.png"
+  },
+  "icons": {
+    "16": "fix-github16.png",
+    "48": "fix-github48.png",
+    "128": "fix-github128.png"
   },
   "permissions": [
     "background",
